added routine apis
