# src/index.ts
@@ -1,8 +1,8 @@
 import express from "express";
 import cors from "cors";
 import dotenv from "dotenv";
-
-import {sequelize} from "./config/db";
+import "./models"
+import { sequelize } from "./config/db";
 import userRoutes from "./routes/user.route";
 import emailRouter from "./routes/email.route"
 import notificationRoute from "./routes/notification.route"
@@ -10,6 +10,8 @@ import taskRoute from "./routes/task.route"
 import { swaggerUi, swaggerDocument } from "./docs/swagger";
 import { pollUpdates } from "./controllers/telegram.controller"
 import AIRoute from "./routes/ai.route"
+import auth from "./middleware/authentication"
+import RoutineRoute from "./routes/routine.route"
 
 dotenv.config();
 
@@ -18,11 +20,16 @@ const app = express();
 app.use(cors());
 app.use(express.json());
 
+
+
+
+app.get('/', auth, (req, res) => res.send({ success: true }))
 app.use("/api/v1/user", userRoutes);
-app.use("/api/v1/email",emailRouter)
-app.use("/api/v1/notification",notificationRoute)
-app.use("/api/v1/task",taskRoute)
-app.use("/api/v1/ai",AIRoute)
+app.use("/api/v1/email", emailRouter)
+app.use("/api/v1/notification", notificationRoute)
+app.use("/api/v1/task", taskRoute)
+app.use("/api/v1/ai", AIRoute)
+app.use("/api/v1/routine", RoutineRoute)
 
 app.use(
   "/api-docs",
@@ -32,18 +39,18 @@ app.use(
 
 const PORT = process.env.PORT || 5001;
 
+
+
 const startServer = async () => {
   try {
     await sequelize.authenticate();
     console.log("Database connected");
 
-    await sequelize.sync();
+    // await sequelize.sync({ alter: true });
 
     app.listen(PORT, () => {
       console.log(`Server running on port ${PORT}`);
-      console.log(`Swagger docs: http://localhost:${PORT}/api-docs`);
     });
-     setInterval(pollUpdates,12000);
   } catch (error) {
     console.log("Server error:", error);
   }
